feat: criar endpoint de busca de pedido por id com validação e ajustes no ProductRepository e ClientRepository